--- a/Merchants_tpl/pc/wanju/header.html
+++ b/Merchants_tpl/pc/wanju/header.html
@@ -43,9 +43,9 @@
 			<div class="headerML fl">
 				<span>欢迎来到</span><a href="{:C('DOMAIN')}" class="a">云迪网络</a>
 				 <if condition="$user.user_id gt 0">
-				 <span></span><a href="{:U('User/index')}" style="color:#FF5400;">{$user.nickname}</a> <a href="{:C('DOMAIN')}{:U('Home/user/logout')}">安全退出</a>
+				 <span></span><a href="{:C('DOMAIN')}{:U('User/index')}" style="color:#FF5400;">{$user.nickname}</a> <a href="{:C('DOMAIN')}{:U('user/logout')}">安全退出</a>
 				 <else/>
-				<span>已有账号：</span><a href="{:C('DOMAIN')}/Home/user/login.html" class="a">登陆</a><a href="{:C('DOMAIN')}/Home/user/register.html" class="a">立即注册</a>
+				<span>已有账号：</span><a href="{:C('DOMAIN')}{:U('user/login')}" class="a">登陆</a><a href="{:C('DOMAIN')}/Home/user/register.html" class="a">立即注册</a>
 				</if>
 				</div>
 			<div class="headerMR fr">
@@ -53,12 +53,12 @@
 					<li><a href="{:C('DOMAIN')}" >云狄首页</a><span>|</span></li>
 					<li class="headerMRshow"><a href="#" >我的商铺</a><i>&gt;</i><span>|</span>
 						<div class="myShop">
-							<dl><dt><a href="{:C('DOMAIN')}/seller/Admin/login.html">买家中心</a></dt>
+							<dl><dt><a href="{:C('DOMAIN')}{:U('seller/Admin/login')}">买家中心</a></dt>
 						</div></li>
-					<li class="headerMRshow"><a href="{:C('DOMAIN')}/Home/User/goods_collect.html">我的收藏夹</a><i>&gt;</i><span>|</span>
+					<li class="headerMRshow"><a href="{:C('DOMAIN')}{:U('User/goods_collect')}">我的收藏夹</a><i>&gt;</i><span>|</span>
 						<div class="favorites">
-							<dl><dd><a href="{:C('DOMAIN')}/Home/User/goods_collect.html">收藏的货品</a></dd>
-								<dd><a href="{:C('DOMAIN')}/Home/User/goods_collect/type/2.html">收藏的店铺</a></dd>
+							<dl><dd><a href="{:C('DOMAIN')}{:U('User/goods_collect')}">收藏的货品</a></dd>
+								<dd><a href="{:C('DOMAIN')}{:U('User/goods_collect',array('type'=>2))}">收藏的店铺</a></dd>
 								<dd><a href="javascript:;" id="favoriteStore" data-id="{$store['store_id']}" target="_blank">收藏本店铺</a></dd>
 								</dl>
 						</div></li>
@@ -72,7 +72,7 @@
 								</dl>
 						</div></li> -->
 					<!-- <li class="headerMRshow"><a href="#" >实力商家</a><i>&gt;</i><span>|</span>
-						<div class="merchants">
+						<div class="Store">
 							<dl><dd><a href="#">实力品牌</a></dd>
 								<dd><a href="#">实力工厂</a></dd>
 								<dd><a href="#">商家入驻</a></dd>
@@ -139,7 +139,7 @@
 				</div>
 				<div class="hnavoneR">
 						<div class="hnavoneRo">
- 							<form method="get" action="{:U('Goods/search')}">
+ 							<form method="get" action="{:C('DOMAIN')}{:U('Goods/search')}">
  							<input type="hidden" value="search" id="search_act" name="act">
    							<input type="text" name="q" class="ssk" placeholder="请输入产品关键字" class="seach" />
 
@@ -169,7 +169,7 @@
 				<ul>
            			<li><a href="
 
-					<if condition='$nav_where'>{:U('Index/index')}<else/>{:U('Store/index',array('store_id'=>$store[store_id]))}</if>
+					<if condition='$nav_where'>{:U('Store/index')}<else/>{:U('Store/index',array('store_id'=>$store[store_id]))}</if>
 
            			"  style="color:#ff5400;">首页</a> </li>
 					<li
@@ -188,14 +188,14 @@
 					
 
 					><a href="
-					<if condition='$nav_where'>{:U('Goods/goods_list')}<else/>{:U('Store/goods_list',array('store_id'=>$store[store_id]))}</if>
+					<if condition='$nav_where'>{:U('Store/goods_list')}<else/>{:U('Store/goods_list',array('store_id'=>$store[store_id]))}</if>
 					">供应产品 ▼</a>
 							<div class="SupplyProducts">
 								<ul>
 									 <foreach name="main_cat" item="v">  <!-- 商品分类 -->
 									<li onmouseover="xs({$v['cat_id']});"><a target="_blank" href="
 									<if condition='$nav_where'>
-									{:U('Goods/goods_list',array('cat_id'=>$v[cat_id]))}
+									{:U('Store/goods_list',array('cat_id'=>$v[cat_id]))}
 									<else/>
 									{:U('Store/goods_list',array('store_id'=>$store[store_id],'cat_id'=>$v[cat_id]))}
 									</if>
@@ -204,7 +204,7 @@
 									<foreach name="sub_cat[ $v['cat_id'] ]" item="vs">  <!-- 二级分类 --> 
 									<span style="display: none;" class="xs{$v['cat_id']} xs"><span><a target="_blank"  style="color:#008BB9;" href="
 										<if condition='$nav_where'>
-									{:U('Goods/goods_list',array('cat_id'=>$vs[cat_id]))}
+									{:U('Store/goods_list',array('cat_id'=>$vs[cat_id]))}
 									<else/>
 									{:U('Store/goods_list',array('store_id'=>$store[store_id],'cat_id'=>$vs[cat_id]))}
 									</if>
@@ -220,11 +220,11 @@
 			        	<if condition="empty($vv[sn_url])">
 			        	<a href=" 
 			        	<if condition='($vv[sn_is_list] == 1 and $nav_where)'>
-			        	{:U('Article/article_list',array('sn'=>$vv[sn_id]))}
+			        	{:U('Store/article_list',array('sn'=>$vv[sn_id]))}
 			        	<elseif condition='$vv[sn_is_list] == 1 and !$nav_where' />
 			        	{:U('Store/newsList',array('store_id'=>$store[store_id],'sn'=>$vv[sn_id]))}
 			        	<elseif condition='$nav_where' />
-			        	{:U('Cover/cover',array('sn_id'=>$vv[sn_id]))}
+			        	{:U('Store/cover',array('sn_id'=>$vv[sn_id]))}
 			        	<else/>
 			        	{:U('Store/store_news',array('store_id'=>$store[store_id],'sn_id'=>$vv[sn_id]))}
 			        	</if>" 
@@ -242,7 +242,7 @@
 					<a  target="_blank" href="
 
 					<if condition='$nav_where'>
-					{:U('Goods/goods_list',array('cat_id'=>$vz[cat_id]))}
+					{:U('Store/goods_list',array('cat_id'=>$vz[cat_id]))}
 					<else/>
 					{:U('Store/goods_list',array('store_id'=>$store[store_id],'cat_id'=>$vz[cat_id]))}
 					</if>
@@ -261,7 +261,7 @@ function submits()
 {
  var keywords = $('input[name=q]').val();
  if(!keywords){alert('请输入关键字');return;}
- window.location.href="{:U('Home/Store/search')}?store_id={$store[store_id]}&keywords="+keywords;
+ window.location.href="{:U('Store/search')}?store_id={$store[store_id]}&keywords="+keywords;
 }
    function xs(id){
       $('.xs').css('display','none');
@@ -283,7 +283,7 @@ $('#favoriteStore').click(function () {
       type: 'post',
       dataType: 'json',
       data: {store_id: $(this).attr('data-id')},
-      url: "{:U('Home/Store/collect_store')}",
+      url: "{:U('Store/collect_store')}",
       success: function (res) {
         if (res.status == 1) {
           layer.msg('成功添加至收藏夹', {icon: 1});
