--- a/Merchants_tpl/pc/shouye/Newslist.html
+++ b/Merchants_tpl/pc/shouye/Newslist.html
@@ -9,7 +9,7 @@
 			《{$v.title|mb_substr=0,20,'utf-8'}》
 		</div>
 		<div class='n-title'>
-			{$v.shorttitle|mb_substr=0,20,'utf-8'}...
+			{$v.description|mb_substr=0,20,'utf-8'}...
 		</div>
 		<div class='n-author'>作者：{$v.author}</div>
 		<div class='n-time'>{$v.timer|date='Y-m-d',###}</div>
