--- a/Merchants_tpl/pc/company/header.html
+++ b/Merchants_tpl/pc/company/header.html
@@ -29,7 +29,7 @@
 <section class="top_nav">
       <div class="top_nav_bar">
         <ul>
-          <li class="top_nav_barM"><a href="{:U('Store/index',array('store_id'=>$store[store_id]))}" style="color:#ff5400;">首页</a></li>
+          <li class="top_nav_barM"><a href="{:U('Store/index',array('store_id'=>$store[store_id]))}" style="color:#ff5400;" title='首页'>首页</a></li>
           <li
           <?php 
 
@@ -44,7 +44,7 @@
           ?>
           ><a href="
           <if condition='$nav_where'>{:U('Store/goods_list')}<else/>{:U('Store/goods_list',array('store_id'=>$store[store_id]))}</if>
-          ">供应产品</a>
+          " title='供应产品'>供应产品</a>
               <div class="SupplyProducts">
                 <ul>
                    <foreach name="main_cat" item="v">  <!-- 商品分类 -->
@@ -54,43 +54,43 @@
                   <else/>
                   {:U('Store/goods_list',array('store_id'=>$store[store_id],'cat_id'=>$v[cat_id]))}
                   </if>
-                  " >{$v.cat_name}</a></li>
+                  " title='{$v.cat_name}'>{$v.cat_name}</a></li>
                   </foreach>
                 </ul>
               </div>
           </li>
           <!-- 自定义导航 -->
-                 <foreach name="navigation" item="vv" key="kk">
-                <li <?php if($vv['sn_id'] == $_GET['sn_id']){echo 'class="top_nav_barM"';}?> >
-                <if condition="empty($vv[sn_url])">
-                <a href=" 
-                <if condition='($vv[sn_is_list] == 1 and $nav_where)'>
-                {:U('Store/newsList',array('sn'=>$vv[sn_id]))}
-                <elseif condition='$vv[sn_is_list] == 1 and !$nav_where' />
-                {:U('Store/newsList',array('store_id'=>$store[store_id],'sn'=>$vv[sn_id]))}
-                <elseif condition='$nav_where' />
-                {:U('Store/cover',array('sn_id'=>$vv[sn_id]))}
-                <else/>
-                {:U('Store/store_news',array('store_id'=>$store[store_id],'sn_id'=>$vv[sn_id]))}
-                </if>"
-                >
-                <else/>
-                <a href="{$vv.sn_url}">
-                </if>
-                {$vv.sn_title}</a>
-                </li>
+              <foreach name="navigation" item="vv" key="kk">
+                  <li <?php if($vv['sn_id'] == $_GET['sn_id']){echo 'class="top_nav_barM"';}?> >
+                    <if condition="empty($vv[sn_url])">
+                      <a href=" 
+                      <if condition='($vv[sn_is_list] == 1 and $nav_where)'>
+                      {:U('Store/newsList',array('sn'=>$vv[sn_id]))}
+                      <elseif condition='$vv[sn_is_list] == 1 and !$nav_where' />
+                      {:U('Store/newsList',array('store_id'=>$store[store_id],'sn'=>$vv[sn_id]))}
+                      <elseif condition='$nav_where' />
+                      {:U('Store/cover',array('sn_id'=>$vv[sn_id]))}
+                      <else/>
+                      {:U('Store/store_news',array('store_id'=>$store[store_id],'sn_id'=>$vv[sn_id]))}
+                      </if>"
+                      title = '{$vv.sn_keyword}'>
+                    <else/>
+                      <a href="{$vv.sn_url}" title = '{$vv.sn_keyword}'>
+                    </if>
+                    {$vv.sn_title}</a>
+                  </li>
               </foreach>
         <!-- 分类在导航显示 -->
             <foreach name="link_cat" item="vz">
           <li <?php if($vz['cat_id'] == $_GET['cat_id']){echo 'class="top_nav_barM"';}?>>
-          <a  target="_blank" href="
+          <a href="
 
           <if condition='$nav_where'>
           {:U('Store/goods_list',array('cat_id'=>$vz[cat_id]))}
           <else/>
           {:U('Store/goods_list',array('store_id'=>$store[store_id],'cat_id'=>$vz[cat_id]))}
           </if>
-          ">{$vz.cat_name}</a> </li>
+          " title='{$vz.cat_name}'>{$vz.cat_name}</a> </li>
             </foreach>
         <div class="cl"></div>
         </ul>
