--- a/Merchants_tpl/pc/company/index.html
+++ b/Merchants_tpl/pc/company/index.html
@@ -3,9 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title></title>
-<meta name="keywords" content="佛山市欧森特门窗有限公司"/>
-<meta name="description" content="佛山市欧森特门窗有限公司"/>
-<link rel="shortcut icon" href="favicon.ico"/>
+<meta name="keywords" content="{$store.seo_keywords}" />
+<meta name="description" content="{$store.seo_description}"/>
 <link type="text/css" rel="stylesheet" href="{:STYLE}/Css/style.css">
 <link rel="stylesheet" type="text/css" href="{:STYLE}/Css/slick.css"/>
 <link rel="stylesheet" href="{:STYLE}/Css/kefu.css">
