--- a/Merchants_tpl/pc/company/newslist.html
+++ b/Merchants_tpl/pc/company/newslist.html
@@ -3,8 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title></title>
-<meta name="keywords" content="佛山市欧森特门窗有限公司"/>
-<meta name="description" content="佛山市欧森特门窗有限公司"/>
+<meta name="keywords" content="{$store.seo_keywords}" />
+<meta name="description" content="{$store.seo_description}"/>
 <link rel="shortcut icon" href="favicon.ico"/>
 <link type="text/css" rel="stylesheet" href="{:STYLE}/Css/style.css">
 <link rel="stylesheet" type="text/css" href="{:STYLE}/Css/slick.css"/>
@@ -59,7 +59,7 @@
       《{$v.title|mb_substr=0,20,'utf-8'}》
     </div>
     <div class='n-title'>
-      {$v.shorttitle|mb_substr=0,20,'utf-8'}...
+      {$v.description|mb_substr=0,20,'utf-8'}...
     </div>
     <div class='n-author'>作者：{$v.author}</div>
     <div class='n-time'>{$v.timer|date='Y-m-d',###}</div>
@@ -82,5 +82,5 @@
   .news .pg .pagination{margin: 0px auto;height:33px;margin-top: 5px;float: right;text-align: center;}
 </style>
 
-  <include file="./footer"/>
+<include file="./footer"/>
 </html>
