--- a/Merchants_tpl/pc/default3/header.html
+++ b/Merchants_tpl/pc/default3/header.html
@@ -3,8 +3,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>{$store.store_name}</title>
-<meta name="keywords" content="TPshop,搜豹网络," />
-<meta name="description" content="TPshop,搜豹网络," />
+
+<meta name="keywords" content="{$store.seo_keywords}" />
+    <meta name="description" content="{$store.seo_description}"/>
 <link href="__STATIC__/css/store_base.css" rel="stylesheet" type="text/css">
 <link href="__STATIC__/css/store_header.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="__STATIC__/css/common.min.css">
