--- a/Merchants_tpl/pc/wanju/header.html
+++ b/Merchants_tpl/pc/wanju/header.html
@@ -86,7 +86,7 @@
 
 					<if condition='$nav_where'>{:U('Store/index')}<else/>{:U('Store/index',array('store_id'=>$store[store_id]))}</if>
 
-           			"  style="color:#ff5400;">首页</a> </li>
+           			"  style="color:#ff5400;" title='首页'>首页</a> </li>
 					<li
 
 					<?php 
@@ -104,7 +104,7 @@
 
 					><a href="
 					<if condition='$nav_where'>{:U('Store/goods_list')}<else/>{:U('Store/goods_list',array('store_id'=>$store[store_id]))}</if>
-					">供应产品 ▼</a>
+					" title='产品'>供应产品 ▼</a>
 							<div class="SupplyProducts">
 								<ul>
 									 <foreach name="main_cat" item="v">  <!-- 商品分类 -->
@@ -114,16 +114,16 @@
 									<else/>
 									{:U('Store/goods_list',array('store_id'=>$store[store_id],'cat_id'=>$v[cat_id]))}
 									</if>
-									" >{$v.cat_name}</a></li>
+									" title='{$v.cat_name}'>{$v.cat_name}</a></li>
 									
 									<foreach name="sub_cat[ $v['cat_id'] ]" item="vs">  <!-- 二级分类 --> 
-									<span style="display: none;" class="xs{$v['cat_id']} xs"><span><a target="_blank"  style="color:#008BB9;" href="
+									<span style="display: none;" class="xs{$v['cat_id']} xs"><span><a  style="color:#008BB9;" href="
 										<if condition='$nav_where'>
 									{:U('Store/goods_list',array('cat_id'=>$vs[cat_id]))}
 									<else/>
 									{:U('Store/goods_list',array('store_id'=>$store[store_id],'cat_id'=>$vs[cat_id]))}
 									</if>
-									">{$vs.cat_name}</a></span><br/></span>
+									" title='{$vs.cat_name}'>{$vs.cat_name}</a></span><br/></span>
 									</foreach>
 									</foreach>
 								</ul>
@@ -143,10 +143,10 @@
 			        	<else/>
 			        	{:U('Store/store_news',array('store_id'=>$store[store_id],'sn_id'=>$vv[sn_id]))}
 			        	</if>" 
-						
+						title = '{$vv.sn_keyword}'
 			        	>
 			        	<else/>
-			        	<a href="{$vv.sn_url}">
+			        	<a href="{$vv.sn_url}" title = '{$vv.sn_keyword}'>
 			        	</if>
 			        	{$vv.sn_title}</a>
 			        	</li>
@@ -154,14 +154,13 @@
       	<!-- 分类在导航显示 -->
 		      	<foreach name="link_cat" item="vz">
 					<li <?php if($vz['cat_id'] == $_GET['cat_id']){echo 'class="top_nav_barM"';}?>>
-					<a  target="_blank" href="
-
+					<a href="
 					<if condition='$nav_where'>
 					{:U('Store/goods_list',array('cat_id'=>$vz[cat_id]))}
 					<else/>
 					{:U('Store/goods_list',array('store_id'=>$store[store_id],'cat_id'=>$vz[cat_id]))}
 					</if>
-					">{$vz.cat_name}</a> </li>
+					" title='{$vz.cat_name}'>{$vz.cat_name}</a> </li>
 		      	</foreach>
 
 				<div class="cl"></div>
