--- a/Merchants_tpl/pc/default/header.html
+++ b/Merchants_tpl/pc/default/header.html
@@ -78,14 +78,14 @@
                           </ul>
            </li>
       <!-- 自定义导航 -->
-           <foreach name="navigation" item="vv" key="kk">
-          <li>
+          <foreach name="navigation" item="vv" key="kk">
+          <li <?php if($vv['sn_id'] == $_GET['sn_id']){echo 'class="top_nav_barM"';}?> >
           <if condition="empty($vv[sn_url])">
-          <a href="{:U('Store/store_news',array('store_id'=>$store[store_id],'sn_id'=>$vv[sn_id]))}">
+          <a <?php if($vv['sn_new_open']){echo 'target="_blank"';}?> href="<if condition='$vv[sn_is_list] eq 1'>{:U('Store/NewsList',array('store_id'=>$store[store_id],'sn'=>$vv[sn_id]))}<else/>{:U('Store/store_news',array('store_id'=>$store[store_id],'sn_id'=>$vv[sn_id]))}</if>"  title = '{$vv.sn_keyword}'>
           <else/>
-          <a href="{$vv.sn_url}">
+          <a href="{$vv.sn_url}"  title = '{$vv.sn_keyword}'>
           </if>
-          <span>{$vv.sn_title}<i></i></span></a>
+          {$vv.sn_title}</a>
           </li>
         </foreach>
         <!-- 分类在导航显示 -->
