--- a/Merchants_tpl/mobile/xiaohua/newsList.html
+++ b/Merchants_tpl/mobile/xiaohua/newsList.html
@@ -38,10 +38,10 @@
 <br style="clear:both;" />
                 <section class="page_c" style="width:100%;height:30px;line-height:30px;text-align: center;">
                 <div style="width:30%;float:left;height:30px;line-height:30px;text-align: center;">
-                <a <?php if($_GET['p'] <= 1){echo 'style="display:none;"';};?> href="{:U('newsList',array('store_id'=>$store[store_id],'sn'=>$_GET[sn],'p'=>$current-1))}">上一页</a></div>
+                <a <?php if($_GET['p'] <= 1){echo 'style="display:none;"';};?> href="{$prev}">上一页</a></div>
                 <div style="width:40%;float:left;height:30px;line-height:30px;text-align:center;">{$current}/{$num}</div>
                 <div style="width:30%;float:right;height:30px;line-height:30px;text-align:center;">
-                <a <?php if($_GET['p'] >= $num){echo 'style="display:none;"';};?> href="{:U('newsList',array('store_id'=>$store[store_id],'sn'=>$_GET[sn],'p'=>$current+1))}">下一页</a></div>
+                <a <?php if($_GET['p'] >= $num){echo 'style="display:none;"';};?> href="{$next}">下一页</a></div>
             
         </section>
 <br style="clear:both;" />
