--- a/Merchants_tpl/pc/sports/index.html
+++ b/Merchants_tpl/pc/sports/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
-	<meta charset="utf-8">
-	<meta content="网站关键字" name="keywords">
-	<meta content="网站关键字seo" name="description">
+	<title>{$store.store_name}</title>
+	 <meta name="keywords" content="{$store.seo_keywords}" />
+    <meta name="description" content="{$store.seo_description}"/>
 	<script type="text/javascript" src="{:STYLE}/js/jquery-1.7.1.min.js"></script>
 	<script type="text/javascript" src="{:STYLE}/js/index.js"></script>
 	<script type="text/javascript" src="{:STYLE}/js/lbt.js"></script>
