--- a/Merchants_tpl/pc/food/goods_list.html
+++ b/Merchants_tpl/pc/food/goods_list.html
@@ -1,55 +1,63 @@
-<!DOCTYPE >
-<html >
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title></title>
-<meta name="keywords" content="{$store.seo_keywords}" />
-<meta name="description" content="{$store.seo_description}"/>
-<link rel="shortcut icon" href="favicon.ico"/>
-  <script type="text/javascript" src="{:STYLE}/js/jquery-1.7.1.min.js"></script>
-  <script type="text/javascript" src="{:STYLE}/js/index.js"></script>
+    <meta charset="UTF-8">
+    <title>{$store.store_name}</title>
+     <meta name="keywords" content="{$store.seo_keywords}" />
+    <meta name="description" content="{$store.seo_description}"/>
+    <script type="text/javascript" src="{:STYLE}/js/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="{:STYLE}/js/index.js"></script>
+    <script type="text/javascript" src="{:STYLE}/js/lbt.js"></script>
+    
+    <link rel="stylesheet" type="text/css" href="{:STYLE}/css/lbt.css">
 
-  
-  <script type="text/javascript" src="{:STYLE}/js/jquery.banner.revolution.min.js"></script>
-  <script type="text/javascript" src="{:STYLE}/js/banner.js"></script>
-  <link rel="stylesheet" type="text/css" href="{:STYLE}/css/lbt.css">
-  <link rel="stylesheet" type="text/css" href="{:STYLE}/css/index.css">
-<style type="text/css">
-  .max *{
-  max-width: 100%;
-  }
-</style>
-  </head>
+    <link rel="stylesheet" type="text/css" href="{:STYLE}/css/index.css">
+
+    
+</head>
 <body>
-
-<!-- 头部开始 -->
 <include file="./header"/>
 <nav class="main_nav">
-      <ul>
+    <ul>                
+        <li style="color:#fff;background:#2B2B2B;width:200px;" class="mainmore"><a href="{:U('Store/goods_list',array('store_id'=>$store[store_id]))}">所有食品分类</a>
+            <div class="mainAll">
+                <foreach name="main_cat" item="v">
+                    <?php if($key>3){break;} ?>
+                <dl>
+                    <dt><a style='color:#000;' href="{:U('Store/goods_list',array('store_id'=>$store[store_id],'cat_id'=>$v[cat_id]))}">{$v.cat_name}</a></dt>
+                     <foreach name="sub_cat[ $v['cat_id'] ]" item="vs">
+                        <?php if($key>3)break; ?>
+                    <dd><a href="{:U('Store/goods_list',array('store_id'=>$store[store_id],'cat_id'=>$vs[cat_id]))}">{$vs.cat_name}</a></dd>
+                    </foreach>
+                </dl>
+            </foreach>
+            </div>
+        </li>
+
+
         <li class="headerN"><a href="{:U('Store/index',array('store_id'=>$store[store_id]))}">首页</a></li>
         <foreach name="navigation" item="vv" key="kk">
-              <li <?php if($vv['sn_id'] == $_GET['sn_id']){echo 'class="top_nav_barM"';}?> >
-              <if condition="empty($vv[sn_url])">
-              <a href=" 
-              <if condition='($vv[sn_is_list] == 1 and $nav_where)'>
-              {:U('Store/article_list',array('sn'=>$vv[sn_id]))}
-              <elseif condition='$vv[sn_is_list] == 1 and !$nav_where' />
-              {:U('Store/newsList',array('store_id'=>$store[store_id],'sn'=>$vv[sn_id]))}
-              <elseif condition='$nav_where' />
-              {:U('Store/cover',array('sn_id'=>$vv[sn_id]))}
-              <else/>
-              {:U('Store/store_news',array('store_id'=>$store[store_id],'sn_id'=>$vv[sn_id]))}
-              </if>" 
-          title = '{$vv.sn_keyword}'
-              >
-              <else/>
-              <a href="{$vv.sn_url}" title = '{$vv.sn_keyword}'>
-              </if>
-              {$vv.sn_title}</a>
-              </li>
-            </foreach>
-        <!-- 分类在导航显示 -->
-          <foreach name="link_cat" item="vz">
+            <li <?php if($vv['sn_id'] == $_GET['sn_id']){echo 'class="top_nav_barM"';}?> >
+            <if condition="empty($vv[sn_url])">
+            <a href=" 
+            <if condition='($vv[sn_is_list] == 1 and $nav_where)'>
+            {:U('Store/article_list',array('sn'=>$vv[sn_id]))}
+            <elseif condition='$vv[sn_is_list] == 1 and !$nav_where' />
+            {:U('Store/newsList',array('store_id'=>$store[store_id],'sn'=>$vv[sn_id]))}
+            <elseif condition='$nav_where' />
+            {:U('Store/cover',array('sn_id'=>$vv[sn_id]))}
+            <else/>
+            {:U('Store/store_news',array('store_id'=>$store[store_id],'sn_id'=>$vv[sn_id]))}
+            </if>" 
+            title = '{$vv.sn_keyword}'
+            >
+            <else/>
+            <a href="{$vv.sn_url}" title = '{$vv.sn_keyword}'>
+            </if>
+            {$vv.sn_title}</a>
+            </li>
+        </foreach>
+        <foreach name="link_cat" item="vz">
         <li <?php if($vz['cat_id'] == $_GET['cat_id']){echo 'class="top_nav_barM"';}?>>
         <a href="
         <if condition='$nav_where'>
@@ -58,31 +66,31 @@
         {:U('Store/goods_list',array('store_id'=>$store[store_id],'cat_id'=>$vz[cat_id]))}
         </if>
         " title='{$vz.cat_name}'>{$vz.cat_name}</a> </li>
-          </foreach>
-      <div class="cl"></div>
-      </ul>
-    </nav>
-<!-- 头部结束 -->
-  <div class="banner" id="banner" >
-   <foreach name="store[store_slide]" item="vimg" key="k">
-        <notempty name="vimg">
-  <a  class="d1" style="background:url({$vimg}) center no-repeat;"></a>
-        </notempty>
-      </foreach>
-  <div class="d2" id="banner_id">
-    <ul>
-      <foreach name="store[store_slide]" item="vimg" key="k">
-              <notempty name="vimg">
-          <li></li>
-              </notempty>
-            </foreach>
+    </foreach>
+    <div class="cl"></div>
     </ul>
-  </div>
-  <script type="text/javascript">banner()</script>
-  </div>
-  
-  <!-- 模块1 -->
-  <div class="center ">
+</nav>
+<!-- 轮播图 -->
+       <div class="banner" id="banner" >
+            <foreach name="store[store_slide]" item="vimg" key="k">
+                <notempty name="vimg">
+                    <a href="#" class="d1" style="background:url({$vimg}) center no-repeat;background-size:100%;"></a>
+                </notempty>
+            </foreach>
+            <div class="d2" id="banner_id">
+                <ul>
+                    <foreach name="store[store_slide]" item="vimg" key="k">
+                    <notempty name="vimg">
+                    <li></li>
+                    </notempty>
+                    </foreach>
+                </ul>
+            </div>
+            <script type="text/javascript">banner()</script>
+        </div>
+        <!--case_box-->
+<!-- 轮播图结束 -->
+ <div class="center ">
    <if condition="($goods_list)"> 
   <section class="main_goods">
     <!-- 产品部分开始 -->
@@ -160,6 +168,8 @@
 <div style="width:1200px;margin:0 auto;text-align:center;height:200px;line-height:200px;font-size:20px;"> 抱歉没有找到相关商品!       </div>
   </if>
   </div>
-
-  <include file="./footer"/>
+<include file="./footer"/>
+</section>
+</body>
 </html>
+ 
