--- a/Merchants_tpl/pc/shuma/shoujishuma/gujianzhu/footer.html
+++ b/Merchants_tpl/pc/shuma/shoujishuma/gujianzhu/footer.html
@@ -75,23 +75,23 @@
 <!-- help-box -->
 <div class="help-box">
   <ul>
-    <li class="qq"><a target="_blank" href="#" class="link" title="点击在线咨询"><i class="fa fa-qq"></i></a></li>
-    <li class="tel"><a href="javascript:void(0);" class="link" title="联系电话"><i class="fa fa-phone"></i></a>
+    <li class="qq"><a target="_blank" href="http://wpa.qq.com/msgrd?V=1&Uin={$store[store_qq]}&Site={$store.store_name}&Menu=yes" class="link" title="点击在线咨询"><i class="fa fa-qq"></i></a></li>
+    <li class="tel"><a href="http://wpa.qq.com/msgrd?V=1&Uin={$store[store_qq]}&Site={$store.store_name}&Menu=yes" class="link" title="联系电话"><i class="fa fa-phone"></i></a>
       <div class="dialog hide">
         <div class="arrow"></div>
-        <div class="item">业务咨询:  400-030-8710</div>
-        <div class="item">业务咨询:  010-84308710</div>
+        <div class="item">业务咨询:  {$store[store_phone]}</div>
+        <div class="item">业务咨询:  {$store[store_phone]}</div>
       </div>
     </li>
-    <li class="weixin"><a href="javascript:void(0);" class="link" title="扫码关注微信"><i class="fa fa-weixin"></i></a>
+   <!--  <li class="weixin"><a href="javascript:void(0);" class="link" title="扫码关注微信"><i class="fa fa-weixin"></i></a>
       <div class="dialog hide">
         <div class="arrow"></div>
         <div class="qrcode"><img src="Picture/shouji.jpg" alt="微信二维码" width="150"><br>微信扫一扫 关注洪雅轩</div>
       </div>
-    </li>
-    <li>
+    </li> -->
+  <!--   <li>
       <div class="bdsharebuttonbox"> <a title="#" href="#" class="bds_tsina" data-cmd="tsina"></a> </div>
-    </li>
+    </li> -->
     <li class="feedback"><a href="#" target="_blank" data-toggle="modal" data-target="#feedbackModal" class="link" title="装修咨询"><i class="fa fa-comment"></i></a></li>
     <li class="back2top"><a href="#"" title="返回顶部"><i class="fa fa-comment"></i></a></li>
   </ul>
